--- a/Kubernetes-wordpress-php-fpm-nginx/ingress.yaml
+++ b/Kubernetes-wordpress-php-fpm-nginx/ingress.yaml
@@ -25,7 +25,7 @@ metadata:
   namespace: staging
 spec:
   rules:
-  - host: sosmedstg.rodxolotl.xyz
+  - host: wordstg.rodxolotl.xyz
     http:
       paths:
       - backend:
